--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=1304
-spring.datasource.url= jdbc:mysql://basededatos:3306/tienda?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url= jdbc:mysql://mysql_tienda:3306/tienda?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
